--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ beautifulsoup4==4.9.1
 certifi==2020.6.20
 chardet==3.0.4
 idna==2.9
+Jinja2==2.11.2
 lxml==4.5.1
+MarkupSafe==1.1.1
 pkg-resources==0.0.0
 requests==2.24.0
 soupsieve==2.0.1
